--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
     <hr/>
     <div class="outputs">
         <div >
-            <div class="months"> <h2 class="h2">January: </h2> <span class="jan">January</span></div>
-            <div class="months"> <h2 class="h2">February: </h2> <span class="feb">February</span></div>
-            <div class="months"> <h2 class="h2">March: </h2> <span class="jan">March</span></div>
-            <div class="months"><h2 class="h2">April: </h2> <span class="ap">April</span></div>
-           <div class="months"> <h2 class="h2">May: </h2> <span class="jan">May</span></div>
-           <div class="months"><h2 class="h2">June: </h2> <span class="ap">June</span></div>
-           <div class="months"><h2 class="h2">July: </h2> <span class="jan">July</span></div>
-            <div class="months"><h2 class="h2">August: </h2> <span class="jan">August</span></div>
-            <div class="months"><h2 class="h2">September: </h2> <span class="ap">September</span></div>
-            <div class="months"> <h2 class="h2">October: </h2> <span class="jan">October</span></div>
-            <div class="months"><h2 class="h2">November: </h2> <span class="ap">November</span></div>
-           <div class="months"><h2 class="h2">December: </h2> <span class="jan">December</span></div>
+            <div class="months"> <h2 class="h2">January: </h2> <span class="month jan">January</span></div>
+            <div class="months"> <h2 class="h2">February: </h2> <span class="month feb">February</span></div>
+            <div class="months"> <h2 class="h2">March: </h2> <span class="month jan">March</span></div>
+            <div class="months"><h2 class="h2">April: </h2> <span class="month ap">April</span></div>
+           <div class="months"> <h2 class="h2">May: </h2> <span class="month jan">May</span></div>
+           <div class="months"><h2 class="h2">June: </h2> <span class="month ap">June</span></div>
+           <div class="months"><h2 class="h2">July: </h2> <span class="month jan">July</span></div>
+            <div class="months"><h2 class="h2">August: </h2> <span class="month jan">August</span></div>
+            <div class="months"><h2 class="h2">September: </h2> <span class="month ap">September</span></div>
+            <div class="months"> <h2 class="h2">October: </h2> <span class="month jan">October</span></div>
+            <div class="months"><h2 class="h2">November: </h2> <span class="month ap">November</span></div>
+           <div class="months"><h2 class="h2">December: </h2> <span class="month jan">December</span></div>
         </div>
         <div>
             <div> <h2 class="h2">Total: </h2><span class="total">total</span></div>
