--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     
    
-   <form action="">
+   <form action="" class='form'>
     <label>shed1</label><input type="number" class="shed"><br/><br/><br/>
     <label>shed2</label><input type="number" class="shed"><br/><br/><br/>
     <label>shed3</label><input type="number" class="shed"><br/><br/><br/>
