--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="months"><h2 class="h2">November: </h2> <span class="month ap">November</span></div>
            <div class="months"><h2 class="h2">December: </h2> <span class="month jan">December</span></div>
         </div>
+        <div class="white"></div>
         <div>
             <div> <h2 class="h2">Total: </h2><span class="total">total</span></div>
             <div><h2 class="h2">weekly output: </h2> <span class="week">week</span></div>
