--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div> <h2 class="h2">Total: </h2><span class="total">total</span></div>
             <div><h2 class="h2">weekly output: </h2> <span class="week">week</span></div>
             <div><h2 class="h2">yearly output</h2> <span class="year">year</span></div>
+            <button class="button">Reset</button>
         </div>
     </div>
    </div>
