--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <h1 id="title">Dairy Farm</h1>
             </div>
             <div>
-                <a href=""><button>Get started</button></a>
+                <a href="" class="hom"><button>Home</button></a>
             </div>
         </div>
     </header>
-    <div class="homepage">
+    <div class="homepage" id="hello">
         <div class="div1">
             <h2 class="home">
                 Find quality milk for<br> processing 
@@ -37,7 +37,7 @@
 
     </div>
     
-   <div id="display">
+   <div id="display" class="display">
     <form action="" class='form'>
         <label>shed1</label><input type="number" class="shed"><br/><br/><br/>
         <label>shed2</label><input type="number" class="shed"><br/><br/><br/>
