--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
     </div>
     
    <div id="display" class="display">
+    <br/><br/><br/><br/><br/><br/>
     <form action="" class='form'>
+
         <label>shed1</label><input type="number" class="shed"><br/><br/><br/>
         <label>shed2</label><input type="number" class="shed"><br/><br/><br/>
         <label>shed3</label><input type="number" class="shed"><br/><br/><br/>
         <label>shed4</label><input type="number" class="shed"><br/><br/><br/>
-        <label>shed5</label><input type="number" class="shed"><br/>
+        <label>shed5</label><input type="number" class="shed"><br/><br/><br/>
        </form>
        <hr/>
        <div class="outputs">
