--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <p id="home">This are quality products that encourage healthy<br> living from a click of a button. The products
             are from well<br> maintained cattles that are healthy.</p>
             <a href=""><button class="pag">Get Started</button></a>
+            <h2>year: </h2><input type="number" class="input">
             
         </div>
         
@@ -40,7 +41,7 @@
    <div id="display" class="display">
     <br/><br/><br/><br/><br/><br/>
     <form action="" class='form'>
-
+        <h4>Year:</h4> <h4 class="h4">year</h4>
         <label>shed1</label><input type="number" class="shed"><br/><br/><br/>
         <label>shed2</label><input type="number" class="shed"><br/><br/><br/>
         <label>shed3</label><input type="number" class="shed"><br/><br/><br/>
